--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0px;
-  padding: 0px;
   font-family: Arial;
   border: border-box;
 }
@@ -24,15 +23,16 @@
   width: 100%;
   background-size: cover;
 }
+/* hover  */
 .border {
   border: 1.5px solid transparent;
 }
+
 .border :hover {
   border: 1.5px solid white;
 }
 
 /* box2 */
-
 .add-first {
   color: #cccccc;
   font-size: 0.85rem;
@@ -66,7 +66,7 @@
 .search-input {
   width: 100%;
   font-size: 1rem;
-  border: 0px;
+  border: none;
 }
 .search-icon {
   width: 50px;
@@ -201,23 +201,24 @@
 .contant {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   background-color: #e2e7e6;
 }
 .contant-box {
-  height: 420px;
+  height: 28rem;
   background-color: white;
   width: 22.5%;
-  margin-left: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 .products-type {
-  margin: 20px 0px 0px 25px;
+  margin: 1rem 0px 0px 1rem;
   color: #0f1111;
 }
 .shop-now {
   position: relative;
-  left: 25px;
-  top: 10px;
+  left: 1rem;
+  top: .75rem;
 }
 .shop-now a {
   color: #007185;
@@ -226,9 +227,11 @@
 }
 .image {
   background-size: cover;
-  height: 320px;
-  margin: 10px 20px 0px 20px;
+  background-position: center;
+  height: 22rem;
+  margin: .75rem 1rem 0px 1rem;
 }
+
 /* last margin */
 .last-containoer {
   height: 150px;
@@ -278,7 +281,7 @@
 }
 /* foote part 1 */
 .footer-part1 {
-  height: 380px;
+  height: 100%;
   width: 100%;
   background-color: #222f3d;
   display: flex;
@@ -288,18 +291,18 @@
   color: white;
   display: flex;
   flex-direction: column;
-  margin: 0px 60px 0px 60px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .footer-info a {
   text-decoration: none;
   color: #dddddd;
   font-size: 0.85rem;
-  margin-top: 12px;
+  margin-top: 0.7rem;
 }
 .footer-info p {
   font-size: 1rem;
   font-weight: 700;
-  margin-top: 50px;
 }
 /* footer-extra */
 .footer-extra {
